used react form hook

--- a/app/globals.css
+++ b/app/globals.css
@@ -36,7 +36,9 @@ a {
   color: inherit;
   text-decoration: none;
 }
-
+span{
+  color: red;
+}
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
