--- a/components/classes.module.css
+++ b/components/classes.module.css
@@ -1,17 +1,104 @@
 .button-link {
   background-color: #61d5ff;
   color: #0a0a0a;
+  z-index: 1;
+  position: relative;
+
   border-radius: 10rem;
   width: fit-content;
   padding: 1.5rem 2.5rem;
+  outline: none;
+  border: none;
+
   display: flex;
   justify-content: space-between;
   align-items: center;
   font-size: 1.6rem;
   font-weight: 700;
+  overflow: hidden;
+  transition: color 0.4s ease-in-out;
+}
+.button-link::before{
+  content: "";
+  z-index: -1;
+  position: absolute;
+  top: 100%;
+  right: 100%;
+  width: 3em;
+  height: 1.5em;
+  border-radius: 50%;
+  background-color: #a9e5fb;
+  transform-origin: center;
+  transform: translate3d(50%, -50%, 0) scale3d(0, 0, 0);
+  transition: transform 0.7s ease-in-out;
 }
 .button-link:hover {
-  background-color: #387e97;
-  color: #fff;
+  cursor: pointer;
+
+}
+.button-link:hover::before {
+  transform: translate3d(50%, -50%, 0) scale3d(15, 15, 15);
+}
+/* 
+button {
+  z-index: 1;
+  position: relative;
+  font-size: inherit;
+  font-family: inherit;
+  color: white;
+  padding: 0.5em 1em;
+  outline: none;
+  border: none;
+  background-color: hsl(236, 32%, 26%);
+  overflow: hidden;
+  transition: color 0.4s ease-in-out;
+}
+
+button::before {
+  content: "";
+  z-index: -1;
+  position: absolute;
+  top: 100%;
+  right: 100%;
+  width: 1em;
+  height: 1em;
+  border-radius: 50%;
+  background-color: #3cefff;
+  transform-origin: center;
+  transform: translate3d(50%, -50%, 0) scale3d(0, 0, 0);
+  transition: transform 0.45s ease-in-out;
+}
+
+button:hover {
+  cursor: pointer;
+  color: #161616;
+}
+
+button:hover::before {
+  transform: translate3d(50%, -50%, 0) scale3d(15, 15, 15);
+} */
+
+.name {
+  position: relative;
+  z-index: 1;
+}
+
+.name::before {
+  content: '';
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  bottom: 0;
+  left: -0.25em;
+  right: 1.75em;
+  background-color: #0b82ae;
+  transform-origin: center right;
+  transform: scaleX(0);
+  transition: transform 1s ease-in-out;
+}
+
+.name:hover::before {
+  transform: scaleX(1);
+  transform-origin: center left;
 }
 
